fix: update datamodel
